setting general position with css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
   <head>
     <link href="./style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
-    <title></title>
+    <title>POMODORO</title>
   </head>
   <body>
+    <header>
+      <h1>POMODORO</h1>
+    </header>
+
+    <div class="dashboard bar">
+      <div class="icon"></div>
+      <div class="icon"></div>
+      <div class="icon"></div>
+      <div class="round icon">
+       <span>Work</span>
+      </div>
+      <div class="round icon">
+        <span>Rest</span>
+      </div>
+      <div class="icon">
+        <span>Reset</span>
+      </div>
+    </div>
+
+    <div class="display"></div>
+
+    <div class="progress bar">
+      <div id="time-left" class="bar"></div>
+    </div>
+
+
+
     <script src="./script.js"></script>
   </body>
 </html>
