--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="icon">
        <span>Work</span>
-       <input type="text" value="15">
+       <input type="text" value="25">
       </div>
       <div class="icon">
         <span>Rest</span>
@@ -37,7 +37,9 @@
       </div>
     </div>
 
-    <div class="display"></div>
+    <div class="display">
+      <p>25:00</p>
+    </div>
 
     <div class="progress bar">
       <div id="time-left" class="bar"></div>
