set work time and main display number with js

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       </div>
       <div class="icon">
        <span>Work</span>
-       <input type="text" value="25">
+       <input id="work" type="number" value="25" min="5" max="60" step="5">
       </div>
       <div class="icon">
         <span>Rest</span>
-        <input type="text" value="5">
+        <input id="rest" type="number" value="5" min="5" max="60" step="5">
       </div>
       <div class="icon">
         <span>Reset</span>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="display">
-      <p>25:00</p>
+      <p id="main-display">25:00</p>
     </div>
 
     <div class="progress bar">
