set functionality for the reset button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="icon">
         <span>Reset</span>
-        <i class="fas fa-sync-alt fa-5x"></i>
+        <i class="fas fa-sync-alt fa-5x" id="reset"></i>
       </div>
     </div>
 
