set functionality of start, stop, and pause button

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 
     <div class="dashboard bar">
       <div class="icon">
-        <i class="fas fa-play fa-5x"></i>
-        <!-- <i class="fas fa-pause fa-5x"></i> -->
+        <i  id="start" class="fas fa-play fa-5x"></i>
       </div>
       <div class="icon">
-        <i class="fas fa-stop fa-5x"></i>
+        <i id="stop" class="fas fa-stop fa-5x"></i>
       </div>
       <div class="icon">
         <i class="fas fa-volume-up fa-5x"></i>
